added an open in media library button got svgs rendering removed the caching from the controller because it was causing errors changed coloured circles with emoji icons fixed incorrect appsettings

--- a/src/HCS.Media.DescriptionManager.TestSite/appsettings.json
+++ b/src/HCS.Media.DescriptionManager.TestSite/appsettings.json
@@ -23,20 +23,18 @@
         }
       }
     },
-    "ConnectionStrings": {
-      "umbracoDbDSN": "Data Source=|DataDirectory|/Umbraco.sqlite.db;Cache=Shared;Foreign Keys=True;Pooling=True",
-      "umbracoDbDSN_ProviderName": "Microsoft.Data.Sqlite"
-    }
   },
   "ConnectionStrings": {
     "umbracoDbDSN": "Data Source=|DataDirectory|/Umbraco.sqlite.db;Cache=Shared;Foreign Keys=True;Pooling=True",
     "umbracoDbDSN_ProviderName": "Microsoft.Data.Sqlite"
   },
-  "HCS" : {
-    "Media" : {
-      "Image" : "altDescription",
-      "umbracoMediaVectorGraphics" : "title",
-      "umbracoMediaVideo" : "title"
+  "HCS": {
+    "Media": {
+      "DescriptionManager": {
+        "Image": "altDescription",
+        "umbracoMediaVectorGraphics": "altDescription",
+        "umbracoMediaVideo": "altDescription"
+      }
     }
   }
 }
