if you edit the media item when opening the overlay, it updates the tree and reloads the dashboard updated app settings to default values

--- a/src/HCS.Media.DescriptionManager.TestSite/appsettings.json
+++ b/src/HCS.Media.DescriptionManager.TestSite/appsettings.json
@@ -32,8 +32,8 @@
     "Media": {
       "DescriptionManager": {
         "Image": "altDescription",
-        "umbracoMediaVectorGraphics": "altDescription",
-        "umbracoMediaVideo": "altDescription"
+        "umbracoMediaVectorGraphics": "title",
+        "umbracoMediaVideo": "title"
       }
     }
   }
